--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="btn_denuncia_anonima">Vandalismo, assalto, pichação e outros</string>
     <string name="btn_disk_entrega">Marmitex, Lanches, Farmácias e outros</string>
     <string name="btn_contato_app">Contato, dúvida e ajuda!</string>
+    <string name="btn_bus_station">Pontos de ônibus</string>
 
     <string name="activity_line_bus_detail_title">Informações da Linha de Ônibus</string>
     <string name="activity_line_bus_detail_title_hours">HORÁRIOS</string>
@@ -20,5 +21,9 @@
     <string name="title_activity_bus_station">Pontos de ônibus</string>
 
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_bus_station_list">BusStationListActivity</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
