--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,6 @@
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_station_bus">Pontos de ônibus</string>
+    <string name="title_activity_maps_station_bus">MapsStationBusActivity</string>
 
 </resources>
