--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_station_bus">Pontos de ônibus</string>
     <string name="title_activity_maps_station_bus">MapsStationBusActivity</string>
+    <string name="title_activity_street_view">StreetViewActivity</string>
 
 </resources>
